# learnium

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: debug_cmake.yml
app/: CMakeLists.txt  main.c
include/: ln.h
include/src/: chunk.h  compiler.h  hash_table.h  memory.h  object.h  opcodes.h  scanner.h  value.h  vm.h
src/: CMakeLists.txt  chunk.c  compiler.c  hash_table.c  memory.c  object.c  scanner.c  value.c  vm.c
tests/: CMakeLists.txt  main.c
